@@ -1,5 +1,8 @@
 2004-02-20  William Jon McCann  <mccann@jhu.edu>
 
+	* src/hand.cpp (bj_hand_finish_play): Only set the player to
+	the next player if it is not NULL.  Fixes bug #134488.
+
 	* src/events.cpp: Properly initialize variables.  Fixes bug #125523.
 	(handle_slot_pressed): Remove debug print statement.
 
